fixed background image not fitting full height on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
     color: white;
     background-image: url("../img/default.jpg");
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: fixed;
     background-size: cover;
     width: 100%;
     height:100vh;
